--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "babel-jest": "^23.0.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "webpack-remove-blocks": "^1.1.0"
   },
   "eslintConfig": {
     "root": true,
